# hexagonal_backend_template

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.local.yml  pyproject.toml  sonar-project.properties
.agents/rules/: caveman-rules.md  crg-rules.md  proj-api.md  proj-ci.md  proj-code-style.md  proj-context.md  proj-git.md  proj-sonar.md  proj-testing.md
.agents/skills/proj-create-pr/: SKILL.md
.github/config/: release-please-config.json
.github/workflows/: cd.yml  ci.yml  release-please.yml
docker/: .env.sonar.example  docker-compose.local.yml  docker-compose.sonar.yml
docs/: AGENTS_SETUP.md  CONSTITUTION.md  LOCAL_CI_GUIDE.md  getting_started.md
src/app/: __init__.py
src/app/application/ports/inbound/: item_service_port.py
src/app/application/ports/outbound/: item_repository_port.py
src/app/application/use_cases/: item_use_case.py
src/app/domain/: __init__.py
src/app/domain/exceptions/: item_errors.py
src/app/domain/models/: item.py  shared.py
src/app/infrastructure/: main.py
src/app/infrastructure/adapters/inbound/http/: health_router.py  item_router.py  jsend.py  schemas.py
src/app/infrastructure/adapters/outbound/persistence/: item_repository.py
src/app/infrastructure/config/: container.py  settings.py
src/env/: DEV.env  PROD.env  TEST.env  UAT.env
tests/: README.md  conftest.py
tests/architecture/: test_boundaries.py  test_structure.py
tests/contract/: test_placeholder.py
tests/contract/outbound/: test_item_repository_contract.py
tests/integration/inbound/http/: test_endpoints.py
tests/unit/application/use_cases/: test_item_use_case.py
tests/unit/domain/exceptions/: test_item_errors.py
tests/unit/domain/models/: test_item.py  test_shared.py
